# NucleusIQ

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION_OPPORTUNITIES.md  README.md
.github/workflows/: ci.yml  publish.yml
notebooks/agents/: .gitignore  README.md  mcp_tools_showcase.ipynb
notebooks/agents/agent_engineering_challenge/: README.md  SCORECARD_SPEC.md  TASK.md
notebooks/agents/agent_engineering_challenge/data/: company_overview.txt  customer_feedback.txt  financial_notes.txt  legal_contract_notes.txt  risk_register.txt
notebooks/agents/agent_engineering_challenge/submissions/_template/: run.py
notebooks/agents/agent_engineering_challenge/submissions/nucleusiq_openai/: result.json  run.py  run_compare.py
notebooks/agents/investment_board_devils_advocate/: PACK_CONTENTS.md  README.md  SOURCES.md
notebooks/agents/investment_board_devils_advocate/committee/: __init__.py  credit_artifacts.py  env.py  memos.py  metrics.py  pack_builder.py  pack_tools.py  paths.py  pdf_financials.py  showcase_agent.py
notebooks/agents/investment_board_devils_advocate/notebooks/: devils_advocate_showcase.ipynb
notebooks/agents/investment_board_devils_advocate/schema/: investment_committee_pack.schema.json
notebooks/agents/text_to_sql_eval/: .gitignore  ARCHITECTURE.md  README.md  links.py  run_all.py  showcase.ipynb
notebooks/agents/text_to_sql_eval/agent/: __init__.py  build_agent.py  db.py  env.py  sql_tools.py
notebooks/agents/text_to_sql_eval/evals/: __init__.py  conftest.py  extract.py  graders.py  production_evaluators.py  runner.py  scorecard.py  test_patterns.py
notebooks/agents/text_to_sql_eval/scripts/: build_fat_db.py  download_chinook.py  render_showcase_image.py
scripts/: verify_core_package_layout.py
src/nucleusiq/: README.md  pyproject.toml
src/nucleusiq/core/: __init__.py
src/nucleusiq/core/agents/: agent.py  agent_result.py
src/nucleusiq/core/agents/components/: decomposer.py
src/nucleusiq/core/agents/context/: workspace_tools.py
src/nucleusiq/core/agents/modes/: autonomous_mode.py  base_mode.py
src/nucleusiq/core/agents/modes/autonomous/: telemetry.py
src/nucleusiq/core/agents/observability/: __init__.py  record_builders.py
src/nucleusiq/core/tools/: __init__.py  protocols.py
src/nucleusiq/tests/tools/unit/: test_expandable_tool_protocol.py
src/nucleusiq/tests/unit/: test_execution_tracer.py
src/providers/inference/groq/: README.md  pyproject.toml
src/providers/inference/groq/examples/: README.md
src/providers/inference/groq/nucleusiq_groq/: __init__.py
src/providers/inference/groq/nucleusiq_groq/_shared/: response_models.py
src/providers/inference/groq/nucleusiq_groq/nb_groq/: chat.py
src/providers/inference/groq/tests/: test_chat.py
src/providers/inference/ollama/: README.md  pyproject.toml
src/providers/inference/ollama/nucleusiq_ollama/: __init__.py
src/providers/inference/ollama/nucleusiq_ollama/_shared/: wire.py
src/providers/inference/ollama/tests/: test_wire.py
src/providers/llms/anthropic/: README.md  pyproject.toml
src/providers/llms/anthropic/examples/: README.md
src/providers/llms/anthropic/examples/agents/: 01_anthropic_direct.py  02_anthropic_direct_with_tool.py  03_anthropic_standard_tools.py  04_anthropic_autonomous.py  05_anthropic_stream.py  06_anthropic_execution_modes.py  07_anthropic_llm_stream_raw.py  10_anthropic_native_tools.py  11_anthropic_prompt_caching.py  12_anthropic_extended_thinking.py
src/providers/llms/anthropic/nucleusiq_anthropic/: __init__.py  llm_params.py
src/providers/llms/anthropic/nucleusiq_anthropic/_shared/: response_models.py  wire.py
src/providers/llms/anthropic/nucleusiq_anthropic/nb_anthropic/: messages.py  stream_adapter.py
src/providers/llms/anthropic/nucleusiq_anthropic/tools/: __init__.py  anthropic_tool.py  converter.py
src/providers/llms/anthropic/tests/: test_anthropic_tool.py  test_converter.py  test_messages_normalize.py  test_stream_events.py
src/providers/llms/anthropic/tests/integration/: test_anthropic_phase_b_live.py
src/providers/llms/gemini/: README.md  pyproject.toml
src/providers/llms/gemini/nucleusiq_gemini/: __init__.py
src/providers/llms/gemini/nucleusiq_gemini/_shared/: response_models.py
src/providers/llms/gemini/nucleusiq_gemini/nb_gemini/: response_normalizer.py
src/providers/llms/openai/: README.md  pyproject.toml
src/providers/llms/openai/nucleusiq_openai/_shared/: response_models.py
src/providers/llms/openai/nucleusiq_openai/nb_openai/: response_normalizer.py
src/providers/llms/openai/tests/: test_tool_conversion.py
src/providers/tools/mcp/: README.md  pyproject.toml
src/providers/tools/mcp/examples/: 01_basic_stdio.py  02_http_with_auth.py  03_multi_server.py  04_low_level_session.py  05_oauth.py  06_error_handling.py  07_decorator_filters.py  08_full_agent_with_llm.py  README.md
src/providers/tools/mcp/nucleusiq_mcp/: __init__.py  auth.py  bound_tool.py  config.py  decorators.py  exceptions.py  mcp_tool.py  models.py  retry.py  schema_adapter.py  session.py
src/providers/tools/mcp/tests/integration/: conftest.py  test_transports_live.py  test_with_anthropic.py
src/providers/tools/mcp/tests/unit/: conftest.py  test_auth.py  test_bound_tool.py  test_config.py  test_decorators.py  test_exceptions.py  test_mcp_tool.py  test_models.py  test_retry.py  test_schema_adapter.py  test_session.py
