[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nucleusiq"
version = "0.7.11"
description = "NucleusIQ – open-source framework for building autonomous AI agents with advanced prompt engineering, flexible execution modes, and modular architecture."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
authors = [
    { name = "Nucleusbox", email = "info@nucleusbox.com" }
]
keywords = ["AI", "agents", "orchestration", "framework", "prompt-engineering", "LLM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.11.0,<3.0",
    "PyYAML>=5.4,<7.0",
    "python-dotenv>=0.19.0,<2.0",
    "typing_extensions>=4.0; python_version<'3.11'",
]

[project.optional-dependencies]
openai = ["nucleusiq-openai"]
# Future providers (uncomment when published)
# gemini = ["nucleusiq-gemini"]
# groq = ["nucleusiq-groq"]
# ollama = ["nucleusiq-ollama"]
# pinecone = ["nucleusiq-pinecone"]
# chroma = ["nucleusiq-chroma"]
# MCP tool adapter — pulls the official MCP SDK + our adapter package.
# Lets users write ``pip install "nucleusiq[mcp]"`` instead of remembering
# the separate ``nucleusiq-mcp`` package name.
mcp = ["nucleusiq-mcp>=0.1.0b1"]
clustering = ["scikit-learn>=1.0"]
# Not imported by nucleusiq itself; some notebooks/examples use HTTP via requests.
# Use if you depended on ``requests`` transitively from older nucleusiq installs.
http = [
    "requests>=2.33.0,<3.0",
    "urllib3>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/nucleusbox/NucleusIQ"
Documentation = "https://github.com/nucleusbox/NucleusIQ#readme"
Repository = "https://github.com/nucleusbox/NucleusIQ"
Issues = "https://github.com/nucleusbox/NucleusIQ/issues"
Changelog = "https://github.com/nucleusbox/NucleusIQ/releases"

# ---------------------------------------------------------------------------
# Dependency groups (PEP 735)
# ---------------------------------------------------------------------------
[dependency-groups]
test = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.23,<2.0",
    "pytest-cov>=4.0,<8.0",
    "pytest-mock>=3.10,<4.0",
    "scikit-learn>=1.0",
    "nucleusiq-openai",
]
lint = [
    "ruff>=0.15.14,<1.0",
    "pyrefly>=1.0,<2",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

# ---------------------------------------------------------------------------
# uv – local editable sources for monorepo development
# ---------------------------------------------------------------------------
[tool.uv.sources]
nucleusiq-openai = { path = "../providers/llms/openai", editable = true }
nucleusiq-mcp = { path = "../providers/tools/mcp", editable = true }

# Transitive dev/test deps only; keep above vulnerable AdlLexer ReDoS (CVE-2026-4539, <=2.19.2).
[tool.uv]
constraint-dependencies = [
    "pygments>=2.20.0",
]

# ---------------------------------------------------------------------------
# Setuptools – map core/ directory to nucleusiq package
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = { "nucleusiq" = "core" }
packages = [
    "nucleusiq",
    "nucleusiq.tests",
    "nucleusiq.errors",
    "nucleusiq.agents",
    "nucleusiq.agents.builder",
    "nucleusiq.agents.components",
    "nucleusiq.agents.config",
    "nucleusiq.agents.context",
    "nucleusiq.agents.context.strategies",
    "nucleusiq.agents.messaging",
    "nucleusiq.agents.modes",
    "nucleusiq.agents.modes.autonomous",
    "nucleusiq.agents.observability",
    "nucleusiq.agents.structured_output",
    "nucleusiq.agents.usage",
    "nucleusiq.streaming",
    "nucleusiq.llms",
    "nucleusiq.memory",
    "nucleusiq.plugins",
    "nucleusiq.plugins.builtin",
    "nucleusiq.tools",
    "nucleusiq.tools.builtin",
    "nucleusiq.prompts",
    "nucleusiq.utilities",
]

# ---------------------------------------------------------------------------
# Pyrefly — static type checking (Meta's type checker, MIT licensed)
# ---------------------------------------------------------------------------
[tool.pyrefly]
python-version = "3.10"
project-includes = ["core/"]
project-excludes = ["tests/", "build/"]
search-path = ["core"]
ignore-missing-imports = ["sklearn.*"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line too long – handled by formatter
    "B008",    # function call in default argument
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
]

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -vv --import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring live API keys",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
omit = ["tests/*", "examples/*"]
