[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nucleusiq-mcp"
version = "0.1.0b1"
description = "Model Context Protocol (MCP) tool adapter for the NucleusIQ AI agent framework. Connect any MCP server (stdio, Streamable HTTP, SSE) as a NucleusIQ BaseTool."
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [{ name = "Nucleusbox", email = "info@nucleusbox.com" }]
keywords = ["AI", "agents", "mcp", "model-context-protocol", "tools", "nucleusiq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core framework. We currently rely on 0.7.11 for the ExpandableTool
    # protocol, ToolCallRecord.source plumbing, and parallel-connect bug
    # fix shipped alongside this package.
    "nucleusiq>=0.7.11",
    # Official MCP Python SDK.  Pin to 1.27 for the stable transports +
    # OAuth provider surface; <2 to allow patch upgrades but require an
    # explicit bump on a 2.x major.
    "mcp>=1.27,<2",
    # httpx is used implicitly through the SDK's HTTP transports and
    # auth Auth instances we hand to it.  We don't import it directly,
    # but we depend on it so users get a known-good version when the
    # SDK doesn't pin a strict floor.  Drop this once the SDK pins it
    # tightly enough.
    "httpx>=0.27,<1",
    # NOTE: ``anyio`` is intentionally NOT listed here.  The MCP SDK
    # depends on it transitively (it powers all three SDK transports),
    # but ``nucleusiq-mcp`` itself uses plain ``asyncio`` everywhere —
    # ``AsyncExitStack``, ``Lock``, ``gather``, ``wait_for``.  Adding
    # anyio as a direct dep would imply we use its trio bridge, which
    # we do not.  If a future feature (e.g. structured concurrency for
    # parallel tool calls) needs anyio, add it back then.
]

[project.optional-dependencies]
oauth = ["mcp[cli]>=1.27,<2"]

[project.urls]
Homepage = "https://github.com/nucleusbox/NucleusIQ"
Repository = "https://github.com/nucleusbox/NucleusIQ"
Issues = "https://github.com/nucleusbox/NucleusIQ/issues"

[dependency-groups]
test = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.23,<2.0",
    "pytest-cov>=4.0,<8.0",
    "pytest-mock>=3.10,<4.0",
]
lint = ["ruff>=0.15.14,<1.0", "pyrefly>=1.0,<2"]
dev = [{ include-group = "test" }, { include-group = "lint" }]
examples = ["python-dotenv>=1.0,<2"]
full = [{ include-group = "dev" }, { include-group = "examples" }]

[tool.uv.sources]
nucleusiq = { path = "../../../nucleusiq", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["nucleusiq_mcp"]

[tool.pyrefly]
python-version = "3.10"
project-includes = ["nucleusiq_mcp/"]
project-excludes = ["tests/", "examples/", "build/"]
ignore-missing-imports = ["nucleusiq.*", "mcp.*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -vv"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring a live MCP server",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["nucleusiq_mcp"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
